Salvar e Abrir funcionando perfeitamente

--- a/Pomotivo/Pomotivo.csproj
+++ b/Pomotivo/Pomotivo.csproj
@@ -6,4 +6,9 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
+    <PackageReference Include="System.Data.OleDb" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
